--- a/trunk/user/lldt/Makefile
+++ b/trunk/user/lldt/Makefile
@@ -1,14 +1,15 @@
 VPATH = src
-CFLAGS += -O2 -pipe -Wall -Wno-unused -s -fpack-struct -Wpadded
-LD= $(CC)
+CFLAGS += -Os -pipe -Wall -Wno-unused
 OS_LAYER = osl-linux.c
 
 SHDIR = $(ROOTDIR)/user/shared
 USERDIR = $(ROOTDIR)/user
-CFLAGS  += -Wall -I. -I$(SHDIR)/include 
+CFLAGS  += -I. -I$(SHDIR) -I$(SHDIR)/include
+CFLAGS  += $(if $(CONFIG_IPV6),-DUSE_IPV6,)
+
 LDFLAGS += -L$(SHDIR) -lshared
 
-all: lld2d lld2test
+all: lld2d
 
 include src/common.mk
 
@@ -16,6 +17,6 @@ depend:
 	$(CC) $(CFLAGS) -M $(DCFILES) >.depend
 
 clear:
-	rm -f *.o lld2d lld2test
+	rm -f *.o lld2d
 
 -include .depend
